# aoip-core

./: CMakeLists.txt  LICENSE  README.md
include/: aoip.h  rtp.h  sap.h  timer.h  utils.h
include/aoip/: aoip_socket.h  pcap.h  ptp.h  ptpc.h  queue.h  rtp.h  sap.h  socket.h  timer.h  tone.h  utils.h  wav.h
include/ptpc/: ptpc.h  ptpc_socket.h  timer.h
lib/: aoip.c  aoip_socket.c  pcap.c  ptpc.c  ptpc_socket.c  rtp.c  sap.c  socket.c  tone.c  wav.c
lib/core/: aoip.c  sap.c
lib/ptpc/: ptpc.c
src/capture/: audio.c  capture.c  myapp.h  network.c  signal.c
src/rtpdump/: audio.c  network.c  rtpdump.c
src/simple-ptpc/: simple-ptpc.c
src/simple-rtpc/: simple-rtpc-recv.c  simple-rtpc-send.c  simple-rtpc.c
src/simple-sapc/: simple-sapc.c
src/tonegen/: tonegen.c
test/: test_sap.c
test/pcap/: ptpv2_announce.pcap  ptpv2_followup.pcap  ptpv2_sync.pcap  sap_sdp1.pcap  sap_sdp2.pcap
